--- a/exercise_1/group_vars/all/ah_ee_list.yml
+++ b/exercise_1/group_vars/all/ah_ee_list.yml
@@ -1,6 +1,7 @@
 ---
 ee_list:
   - name: "config_as_code"
+    pull: always
     dependencies:
       galaxy:
         collections:
@@ -22,4 +23,5 @@ ee_image_push: true
 ee_prune_images: false
 ee_create_ansible_config: false
 ee_pull_collections_from_hub: false
+ee_create_controller_def: true
 ...
