--- a/exercise_2/group_vars/all/auth.yml
+++ b/exercise_2/group_vars/all/auth.yml
@@ -1,8 +1,9 @@
 ---
-controller_hostname: "{{ controller_host | default(groups['automationcontroller'][0]) }}"
+controller_hostname: "{{ controller_host | default( 'control.' + lookup('ansible.builtin.env', 'INSTRUQT_PARTICIPANT_ID') + '.instruqt.io' )}}"
 controller_username: "{{ controller_user | default('admin') }}"
 controller_password: "{{ controller_pass }}"
 controller_validate_certs: false
+controller_request_timeout: 60
 
 ah_host: "{{ ah_hostname | default( 'hub.' + lookup('ansible.builtin.env', 'INSTRUQT_PARTICIPANT_ID') + '.instruqt.io' )}}"
 ah_username: "{{ ah_user | default('admin') }}"
