--- a/exercise_2/group_vars/all/ah_repositories.yml
+++ b/exercise_2/group_vars/all/ah_repositories.yml
@@ -5,6 +5,7 @@ ah_collection_remotes:
     requirements:
       - name: infra.ee_utilities
       - name: infra.aap_utilities
+      - name: infra.eda_configuration
       - name: containers.podman
       - name: awx.awx
       - name: community.general
