--- a/exercise_1/playbooks/pull_push_ee.yml
+++ b/exercise_1/playbooks/pull_push_ee.yml
@@ -33,10 +33,10 @@
 
     - name: Add Execution Environment to controller
       ansible.builtin.include_role:
-        name: infra.controller_configuration.execution_environments
+        name: infra.aap_configuration.execution_environments
       vars:
         controller_execution_environments:
-          - image: "{{ ah_host }}/config_as_code"
+          - image: "{{ aap_hostname }}/config_as_code"
             name: config_as_code
             pull: always
 ...
